page projet terminée

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,1 +1,79 @@
-<p>A propos</p>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="../CSS/style.css"/>
+    <link rel="stylesheet" href="../CSS/about.css"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
+    
+    <title>A propos Noémie Mateu</title>
+
+</head>
+<body>
+   <header>
+        <nav class="nav_header">
+            <ul class="ul_header">
+                <li class="li_header"> <a href="index.html">Accueil</a></li>
+                <li class="li_header"> <a href="competences.html">Compétences</a></li>
+                <li class="li_header"> <a href="project.html">Projets</a></li>
+                <li class="li_header"> <a href="about.html">A propos</a></li>
+            </ul>
+        </nav>
+   </header>
+   <main>
+        <section class="about">
+                <p class="block_about">
+                    Je m’appelle Noémie MATEU, j’ai 39 ans et je suis en reconversion professionnelle. <br/>J’ai mon permis et je suis véhiculée. <br/><br/>
+
+                    Ma force au travail c’est : <br/>
+                    “Participer activement à la vie de l’entreprise, <br/>
+                    ensemble vers un objectif commun. “ <br/>
+                </p>
+
+                <div class="block_next">
+                    <h2>Soft skills</h2>
+                    <ul>
+                        <li>Créativité</li>
+                        <li>Capacité d’apprentissage</li>
+                        <li>Adaptabilité</li>
+                    </ul>
+                </div>
+
+                <div class="block_next">
+                    <h2>Loisirs</h2>
+                    <ul>
+                        <li>Activités manuelles : création d’animation autour d’un thème choisi</li>
+                        <li>Jardinage : dans le respect de la biodiversité </li>
+                    </ul>
+                </div>
+                <div class="container">
+                    <div class="btn">
+                        <a href="./asset/CV_Noemie_Mateu.png" target="_blank">
+                        Voir mon CV résumé
+                        </a>
+                    </div>
+                    <div class="btn">
+                        <a href="./asset/CV_Noemie_Mateu.zip" target="_blank">
+                        Télécharger mon CV
+                        </a>
+                    </div>
+                </div>
+        </section>
+    </main>
+   <footer>
+        <p>
+            <a href="mailto:noemiemateu@yahoo.fr">noemiemateu@yahoo.fr</a>
+            <p>07-86-88-67-92<br/>
+            34230 POUZOLS</p>
+            <a href="https://www.linkedin.com/in/noemiemateu" target="_blank"> www.linkedin.com/in/noemiemateu</a>
+        </p>
+   </footer>
+</body>
+</html>
