--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="../CSS/style.css"/>
+    <link rel="stylesheet" href="../CSS/accueil.css"/>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
+    
     <title>Présentation Noémie Mateu</title>
 
 </head>
@@ -25,26 +27,29 @@
             </ul>
         </nav>
    </header>
-   <section class="presentation">
-        <img src="./asset/photo_cv.png" alt="Noémie Mateu"/>
 
-        <p>Rigoureuse pour mon travail, je suis persévérante pour accomplir au mieux les tâches qu’on me confie, tout en sachant respecter les dates butoirs.<br/>
-        Bienveillante avec les personnes qui m’entoure, je suis à leur écoute et prête à les aider ce qui facilite mon intégration dans de nouvelles équipes.</p>
-        <cite>Noémie Mateu</cite>
-        <nav>
-            <ul>
-                <li class="li_presentation"> <a href="competences.html">Compétences</a></li>
-                <li class="li_presentation"> <a href="project.html">Projets</a></li>
-                <li class="li_presentation"> <a href="about.html">A propos</a></li>
-            </ul>
-        </nav>
-   </section>
+   <main>
+        <section class="presentation">
+                <img src="./asset/photo_cv.png" alt="Noémie Mateu" title="Je participe activement à la vie de l'entreprise, ensemble vers un objectif commun."/>
+
+                <p>Rigoureuse dans mon travail, je suis persévérante pour accomplir au mieux les tâches qu’on me confie, tout en sachant respecter les dates butoirs.<br/>
+                Bienveillante avec les personnes qui m’entoure, je suis à leur écoute et prête à les aider ce qui facilite mon intégration dans de nouvelles équipes.</p>
+                <cite>Noémie Mateu</cite>
+                <nav>
+                    <ul>
+                        <li class="li_presentation li_competences"> <a href="competences.html">Compétences</a></li>
+                        <li class="li_presentation li_project"> <a href="project.html">Projets</a></li>
+                        <li class="li_presentation li_about"> <a href="about.html">A propos</a></li>
+                    </ul>
+                </nav>
+        </section>
+    </main>
    <footer>
         <p>
             <a href="mailto:noemiemateu@yahoo.fr">noemiemateu@yahoo.fr</a>
             <p>07-86-88-67-92<br/>
             34230 POUZOLS</p>
-            <a href="https://www.linkedin.com/in/noemiemateu"> www.linkedin.com/in/noemiemateu</a>
+            <a href="https://www.linkedin.com/in/noemiemateu" target="_blank"> www.linkedin.com/in/noemiemateu</a>
         </p>
    </footer>
 </body>
