modifications de l'emplacement de quelsues fichiers

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -20,10 +20,10 @@
    <header>
         <nav class="nav_header">
             <ul class="ul_header">
-                <li class="li_header"> <a href="index.html">Accueil</a></li>
+                <li class="li_header"> <a href="../index.html">Accueil</a></li>
                 <li class="li_header"> <a href="competences.html">Compétences</a></li>
                 <li class="li_header"> <a href="project.html">Projets</a></li>
-                <li class="li_header"> <a href="about.html">A propos</a></li>
+                <li class="li_header"> <a href="./HTML/about.html">A propos</a></li>
             </ul>
         </nav>
    </header>
