--- a/HTML/project.html
+++ b/HTML/project.html
@@ -23,9 +23,9 @@
    <header>
         <nav class="nav_header">
             <ul class="ul_header">
-                <li class="li_header"> <a href="index.html">Accueil</a></li>
+                <li class="li_header"> <a href="../index.html">Accueil</a></li>
                 <li class="li_header"> <a href="competences.html">Compétences</a></li>
-                <li class="li_header"> <a href="project.html">Projets</a></li>
+                <li class="li_header"> <a href="./HTML/project.html">Projets</a></li>
                 <li class="li_header"> <a href="about.html">A propos</a></li>
             </ul>
         </nav>
@@ -37,7 +37,7 @@
                 <li class="carousel-item">
                     <div class="card">
                         <h2 class="card-title">Transformez une maquette en site web avec HTML & CSS</h2>
-                        <a href="./asset/projet2.png" target="_blank"><img src="./asset/projet2.png" alt="projet deux"/> </a>
+                        <a href="../asset/projet2.png" target="_blank"><img src="../asset/projet2.png" alt="projet deux"/> </a>
                         <div class="card-content">
                             <p>Implémenter une interface responsive avec du code HTML et CSS en respectant une maquette</p>
                             <a href="https://github.com/Noemie34230/projet2booki" target="_blank" class="button">Voir le code </a> <i class="fa-brands fa-github"></i>
@@ -47,7 +47,7 @@
                 <li class="carousel-item">
                     <div class="card">
                         <h2 class="card-title"> Dynamisez une page web avec des animations CSS</h2>
-                        <a href="./asset/projet3.png" target="_blank"><img src="./asset/projet3.png" alt="projet trois" /> </a> 
+                        <a href="../asset/projet3.png" target="_blank"><img src="../asset/projet3.png" alt="projet trois" /> </a> 
                         <div class="card-content">
                             <p> - Mettre en œuvre des effets CSS graphiques avancés <br>
                                 - Mettre en place une structure de navigation pour un site web<br> 
@@ -61,7 +61,7 @@
                 <li class="carousel-item">
                     <div class="card">
                         <h2 class="card-title">Optimisez un site web existant</h2>
-                        <a href="./asset/projet4.png" target="_blank"><img src="./asset/projet4.png" alt="projet quatre"/> </a>
+                        <a href="../asset/projet4.png" target="_blank"><img src="../asset/projet4.png" alt="projet quatre"/> </a>
                         <div class="card-content">
                             <p> - Analyser de l’état actuel de SEO du site fourni.<br/>
                                 - Améliorer le SEO du site.<br/>
@@ -76,7 +76,7 @@
                 <li class="carousel-item">
                     <div class="card">
                         <h2 class="card-title">Construisez un site e-commerce en JavaScript</h2>
-                        <a href="./asset/projet5.png" target="_blank"><img src="./asset/projet5.png" alt="projet cinq"/> </a>
+                        <a href="../asset/projet5.png" target="_blank"><img src="../asset/projet5.png" alt="projet cinq"/> </a>
                         <div class="card-content">
                             <p>A partir de 4 pages codées en HTML et CSS (page Accueil, page Produit, page Panier et la page Confirmation). <br/>
                                - Intégrer des éléments de façon dynamique grâce à Java Script et l’API</p>
@@ -87,7 +87,7 @@
                 <li class="carousel-item">
                     <div class="card">
                         <h2 class="card-title">Construisez une API sécurisée pour une application d'avis gastronomiques</h2>
-                        <a href="./asset/projet6.png" target="_blank"><img src="./asset/projet6.png" alt="projet six"/> </a>
+                        <a href="../asset/projet6.png" target="_blank"><img src="../asset/projet6.png" alt="projet six"/> </a>
                         <div class="card-content">
                             <p>A partir du front-end de l'application qui a été développé. <br/>
                               - Créer une « galerie de sauces », permettant aux utilisateurs de :
@@ -102,7 +102,7 @@
                 <li class="carousel-item">
                     <div class="card">
                         <h2 class="card-title">Créez une application web de location immobilière avec React</h2>
-                        <a href="./asset/projet7.png" target="_blank"><img src="./asset/projet7.png" alt="projet sept"/> </a>
+                        <a href="../asset/projet7.png" target="_blank"><img src="../asset/projet7.png" alt="projet sept"/> </a>
                         <div class="card-content">
                             <p>- Démarrer le projet React <br/>
                                - Développer l’ensemble de l’application, les composants React, les routes React Router<br/>
