--- a/HTML/competences.html
+++ b/HTML/competences.html
@@ -22,8 +22,8 @@
    <header>
         <nav class="nav_header">
             <ul class="ul_header">
-                <li class="li_header"> <a href="index.html">Accueil</a></li>
-                <li class="li_header"> <a href="competences.html">Compétences</a></li>
+                <li class="li_header"> <a href="../index.html">Accueil</a></li>
+                <li class="li_header"> <a href="/HTML/competences.html">Compétences</a></li>
                 <li class="li_header"> <a href="project.html">Projets</a></li>
                 <li class="li_header"> <a href="about.html">A propos</a></li>
             </ul>
