--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <nav class="nav_header">
             <ul class="ul_header">
                 <li class="li_header"> <a href="index.html">Accueil</a></li>
-                <li class="li_header"> <a href="competences.html">Compétences</a></li>
-                <li class="li_header"> <a href="project.html">Projets</a></li>
-                <li class="li_header"> <a href="about.html">A propos</a></li>
+                <li class="li_header"> <a href="./HTML/competences.html">Compétences</a></li>
+                <li class="li_header"> <a href="./HTML/project.html">Projets</a></li>
+                <li class="li_header"> <a href="./HTML/about.html">A propos</a></li>
             </ul>
         </nav>
    </header>
@@ -37,9 +37,9 @@
                 <cite>Noémie Mateu</cite>
                 <nav>
                     <ul>
-                        <li class="li_presentation li_competences"> <a href="competences.html">Compétences</a></li>
-                        <li class="li_presentation li_project"> <a href="project.html">Projets</a></li>
-                        <li class="li_presentation li_about"> <a href="about.html">A propos</a></li>
+                        <li class="li_presentation li_competences"> <a href="./HTML/competences.html">Compétences</a></li>
+                        <li class="li_presentation li_project"> <a href="./HTML/project.html">Projets</a></li>
+                        <li class="li_presentation li_about"> <a href="./HTML/about.html">A propos</a></li>
                     </ul>
                 </nav>
         </section>
