modifications des chemins pour le cv et la video

--- a/HTML/project.html
+++ b/HTML/project.html
@@ -108,7 +108,7 @@
                                - Développer l’ensemble de l’application, les composants React, les routes React Router<br/>
                                - Respecter les maquettes Figma (Desktop et Mobil) <br/>
                                - Utiliser les 20 annonces de logements dans un fichier JSON</p>
-                            <a href="./asset/video1104489444.mp4" class="button">Voir la présentation </a>
+                            <a href="../asset/video1104489444.mp4" class="button">Voir la présentation </a>
 
                         </div>
                     </div>
