--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img src="./asset/photo_cv.png" alt="Noémie Mateu" title="Je participe activement à la vie de l'entreprise, ensemble vers un objectif commun."/>
 
                 <p>Rigoureuse dans mon travail, je suis persévérante pour accomplir au mieux les tâches qu’on me confie, tout en sachant respecter les dates butoirs.<br/>
-                Bienveillante avec les personnes qui m’entoure, je suis à leur écoute et prête à les aider ce qui facilite mon intégration dans de nouvelles équipes.</p>
+                Bienveillante avec les personnes qui m’entourent, je suis à leur écoute et prête à les aider ce qui facilite mon intégration dans de nouvelles équipes.</p>
                 <cite>Noémie Mateu</cite>
                 <nav>
                     <ul>
