--- a/HTML/about.html
+++ b/HTML/about.html
@@ -55,12 +55,12 @@
                 </div>
                 <div class="container">
                     <div class="btn">
-                        <a href="./asset/CV_Noemie_Mateu.png" target="_blank">
+                        <a href="../asset/CV_Noemie_Mateu.png" target="_blank">
                         Voir mon CV résumé
                         </a>
                     </div>
                     <div class="btn">
-                        <a href="./asset/CV_Noemie_Mateu.zip" target="_blank">
+                        <a href="../asset/CV_Noemie_Mateu.zip" target="_blank">
                         Télécharger mon CV
                         </a>
                     </div>
